fix emptylist, fix list, fix code analytics
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/src/main/res/layout/internal_two_way_sync_layout.xml
+++ b/app/src/main/res/layout/internal_two_way_sync_layout.xml
@@ -12,7 +12,8 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -28,5 +29,5 @@
             android:id="@+id/empty_list"
             layout="@layout/empty_list" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
