--- a/app/src/main/res/layout/notification_list_item.xml
+++ b/app/src/main/res/layout/notification_list_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Nextcloud Talk - Android Client
+  ~ Nextcloud - Android Client
   ~
   ~ SPDX-FileCopyrightText: 2018-2024 Nextcloud GmbH and Nextcloud contributors
   ~ SPDX-FileCopyrightText: 2023 Andy Scherzinger <info@andy-scherzinger.de>
