--- a/app/src/main/res/values/setup.xml
+++ b/app/src/main/res/values/setup.xml
@@ -39,7 +39,7 @@
     <bool name="disable_intro">false</bool>
     <bool name="disable_multiaccount">false</bool>
     <bool name="disable_more_external_site">false</bool>
-    <bool name="disable_sharing">true</bool>
+    <bool name="disable_sharing">false</bool>
     <bool name="disable_clipboard">false</bool>
 
     <!-- Flags to enable/disable some features -->
