add all mdm configs
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/src/main/res/values/setup.xml
+++ b/app/src/main/res/values/setup.xml
@@ -41,6 +41,8 @@
     <bool name="disable_more_external_site">false</bool>
     <bool name="disable_sharing">false</bool>
     <bool name="disable_clipboard">false</bool>
+    <bool name="disable_log">false</bool>
+
 
     <!-- Flags to enable/disable some features -->
     <string name="send_files_to_other_apps">on</string>
