disable log default value is true
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/src/main/res/xml/app_config.xml
+++ b/app/src/main/res/xml/app_config.xml
@@ -57,7 +57,7 @@
 
     <restriction
         android:key="disable_log"
-        android:defaultValue="false"
+        android:defaultValue="true"
         android:restrictionType="bool"
         android:title="@string/app_config_disable_log_title" />
 
