--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -15,7 +15,8 @@
         android:key="general">
         <Preference
             android:title="@string/prefs_data_storage_location"
-            android:key="data_storage_location" />
+            android:key="data_storage_location"
+            android:summary="@string/prefs_data_storage_location_summary" />
         <ListPreference
             android:title="@string/prefs_theme_title"
             android:key="darkMode"
