--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -36,4 +36,7 @@
     <!-- App bar -->
     <color name="appbar">#1E1E1E</color>
     <color name="fontAppbar">@android:color/white</color>
+
+    <!-- Actionbar -->
+    <color name="action_bar">#101418</color>
 </resources>
