--- a/app/src/main/res/layout/dialog_data_storage_location.xml
+++ b/app/src/main/res/layout/dialog_data_storage_location.xml
@@ -22,14 +22,14 @@
 
         <RadioButton
             android:id="@+id/storage_internal_radio"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:enabled="false"
             android:text="@string/storage_internal_storage" />
 
         <RadioButton
             android:id="@+id/storage_external_radio"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:enabled="false"
             android:text="@string/storage_external_storage" />
