--- a/app/src/main/res/layout/notification_list_item.xml
+++ b/app/src/main/res/layout/notification_list_item.xml
@@ -8,7 +8,7 @@
   ~ SPDX-FileCopyrightText: 2018 Tobias Kaminsky <tobias@kaminsky.me>
   ~ SPDX-License-Identifier: GPL-3.0-or-later AND AGPL-3.0-or-later
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -23,46 +23,31 @@
         android:id="@+id/icon"
         android:layout_width="@dimen/notification_icon_width"
         android:layout_height="@dimen/notification_icon_height"
-        android:layout_alignParentTop="true"
         android:layout_marginEnd="@dimen/notification_icon_layout_right_end_margin"
         android:contentDescription="@string/notification_icon"
         android:src="@drawable/ic_notification" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/notification_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/icon"
-        android:layout_toEndOf="@id/icon"
+        android:layout_weight="1"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/subject"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/subject"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:textAppearance="?android:attr/textAppearanceListItem"
-                android:textColor="@color/text_color"
-                android:textSize="@dimen/txt_size_16sp"
-                android:paddingBottom="@dimen/standard_half_padding"
-                tools:text="@string/placeholder_filename" />
-
-            <ImageView
-                android:id="@+id/dismiss"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/dismiss_notification_description"
-                android:src="@drawable/ic_close" />
-        </LinearLayout>
+            android:ellipsize="end"
+            android:paddingBottom="@dimen/standard_half_padding"
+            android:textAppearance="?android:attr/textAppearanceListItem"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/txt_size_16sp"
+            tools:text="@string/placeholder_filename" />
 
         <TextView
             android:id="@+id/message"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:paddingBottom="@dimen/standard_quarter_padding"
@@ -92,4 +77,11 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/dismiss"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/dismiss_notification_description"
+        android:src="@drawable/ic_close" />
+
+</LinearLayout>
