--- a/app/src/main/res/layout/file_details_sharing_process_fragment.xml
+++ b/app/src/main/res/layout/file_details_sharing_process_fragment.xml
@@ -6,7 +6,8 @@
   ~ SPDX-FileCopyrightText: 2021 Nextcloud GmbH
   ~ SPDX-License-Identifier: AGPL-3.0-or-later OR GPL-2.0-only
 -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,37 +18,31 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:padding="@dimen/standard_padding"
-        app:layout_constraintBottom_toTopOf="@+id/share_process_btn_cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="400dp">
+            android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/share_process_edit_share_link"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/share_permissions"
                 android:textColor="@color/primary"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textStyle="bold" />
 
             <RadioGroup
                 android:id="@+id/share_process_permission_radio_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_edit_share_link">
+                android:orientation="vertical">
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/share_process_permission_read_only"
@@ -74,15 +69,12 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/share_process_advance_permission_title"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_margin"
                 android:text="@string/advanced_settings"
                 android:textColor="@color/primary"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_permission_radio_group" />
+                android:textStyle="bold"/>
 
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/share_process_allow_resharing_checkbox"
@@ -91,8 +83,6 @@
                 android:minHeight="@dimen/minimum_size_for_touchable_area"
                 android:text="@string/allow_resharing"
                 android:visibility="gone"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_advance_permission_title"
                 tools:visibility="visible" />
 
             <com.google.android.material.materialswitch.MaterialSwitch
@@ -100,10 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="@dimen/minimum_size_for_touchable_area"
-                android:text="@string/share_no_password_title"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_allow_resharing_checkbox" />
+                android:text="@string/share_no_password_title"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/share_process_enter_password_container"
@@ -112,9 +99,6 @@
                 android:hint="@string/hint_password"
                 android:minHeight="@dimen/minimum_size_for_touchable_area"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_set_password_switch"
                 tools:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -136,10 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_half_margin"
                 android:minHeight="@dimen/minimum_size_for_touchable_area"
-                android:text="@string/share_no_expiration_date_label"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_enter_password_container" />
+                android:text="@string/share_no_expiration_date_label"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/share_process_select_exp_date"
@@ -150,31 +131,22 @@
                 android:padding="@dimen/standard_half_padding"
                 android:visibility="gone"
                 app:drawableEndCompat="@drawable/file_calendar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_set_exp_date_switch"
                 tools:visibility="visible" />
 
             <View
                 android:id="@+id/share_process_exp_date_divider"
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="@color/text_color"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_select_exp_date" />
+                android:background="@color/text_color" />
 
             <com.google.android.material.materialswitch.MaterialSwitch
                 android:id="@+id/share_process_hide_download_checkbox"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_half_margin"
                 android:minHeight="@dimen/minimum_size_for_touchable_area"
                 android:text="@string/share_via_link_hide_download"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_exp_date_divider"
                 tools:visibility="visible" />
 
             <com.google.android.material.materialswitch.MaterialSwitch
@@ -183,10 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_half_margin"
                 android:minHeight="@dimen/minimum_size_for_touchable_area"
-                android:text="@string/link_name"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_hide_download_checkbox" />
+                android:text="@string/link_name" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/share_process_change_name_container"
@@ -195,9 +164,6 @@
                 android:hint="@string/hint_name"
                 android:minHeight="@dimen/minimum_size_for_touchable_area"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_change_name_switch"
                 tools:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -217,35 +183,22 @@
                 android:id="@+id/share_process_group_one"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                app:constraint_referenced_ids="share_process_exp_date_divider,
-                share_process_permission_radio_group,
-                share_process_advance_permission_title, share_process_hide_download_checkbox,
-                share_process_allow_resharing_checkbox, share_process_set_password_switch,
-                share_process_set_exp_date_switch, share_process_enter_password_container,
-                share_process_select_exp_date, share_process_change_name_switch,
-                share_process_change_name_container" />
+                android:visibility="visible" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/share_process_message_title"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_margin"
                 android:text="@string/share_send_note"
-                android:textColor="@color/secondary_text_color"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_edit_share_link" />
+                android:textColor="@color/secondary_text_color"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/note_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/standard_half_margin"
-                android:hint="@string/hint_note"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/share_process_message_title">
+                android:hint="@string/hint_note">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/note_text"
@@ -256,44 +209,47 @@
                     android:inputType="textCapSentences|textMultiLine|textNoSuggestions"
                     android:minLines="10"
                     android:scrollbars="vertical" />
+
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.constraintlayout.widget.Group
                 android:id="@+id/share_process_group_two"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                app:constraint_referenced_ids="share_process_message_title, note_container" />
+                android:visibility="gone"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/standard_margin"
+                android:gravity="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/share_process_btn_cancel"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
+                    android:layout_width="@dimen/button_width"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/standard_half_margin"
+                    android:text="@string/common_cancel"
+                    app:cornerRadius="@dimen/button_corner_radius" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/share_process_btn_next"
+                    android:layout_width="@dimen/button_extra_width"
+                    android:layout_height="wrap_content"
+                    android:text="@string/common_next"
+                    android:theme="@style/Widget.Material3.Button.IconButton.Filled"
+                    app:cornerRadius="@dimen/button_corner_radius"/>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bottom_navigation_view_margin" />
+
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/share_process_btn_cancel"
-        style="@style/Widget.Material3.Button.OutlinedButton"
-        android:layout_width="@dimen/button_width"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/standard_margin"
-        android:layout_marginEnd="@dimen/standard_half_margin"
-        android:layout_marginBottom="@dimen/standard_margin"
-        android:text="@string/common_cancel"
-        app:cornerRadius="@dimen/button_corner_radius"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/share_process_btn_next"
-        app:layout_constraintTop_toTopOf="@+id/share_process_btn_next" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/share_process_btn_next"
-        android:layout_width="@dimen/button_extra_width"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/standard_half_margin"
-        android:layout_marginEnd="@dimen/standard_margin"
-        android:layout_marginBottom="@dimen/standard_margin"
-        android:text="@string/common_next"
-        android:theme="@style/Widget.Material3.Button.IconButton.Filled"
-        app:cornerRadius="@dimen/button_corner_radius"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
