--- a/app/src/main/res/values/dims.xml
+++ b/app/src/main/res/values/dims.xml
@@ -35,6 +35,7 @@
     <dimen name="standard_double_margin">32dp</dimen>
     <dimen name="standard_half_margin">8dp</dimen>
     <dimen name="floating_action_button_bottom_margin">100dp</dimen>
+    <dimen name="bottom_navigation_view_margin">100dp</dimen>
     <dimen name="standard_quarter_margin">4dp</dimen>
     <dimen name="grid_layout_item_size">10dp</dimen>
     <dimen name="grid_layout_file_features_margin_end">24dp</dimen>
