fix(a11y): Add content description for picking contact to share with
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/file_details_sharing_fragment.xml
+++ b/app/src/main/res/layout/file_details_sharing_fragment.xml
@@ -48,8 +48,9 @@
             android:layout_width="@dimen/minimum_size_for_touchable_area"
             android:layout_height="@dimen/minimum_size_for_touchable_area"
             android:layout_gravity="center_vertical"
-            android:padding="12dp"
             android:layout_marginEnd="@dimen/standard_quarter_margin"
+            android:contentDescription="@string/pick_contact_to_share_with"
+            android:padding="12dp"
             android:src="@drawable/ic_contact_book" />
 
     </LinearLayout>
